internal/render/testdata/flaresolverr/k8s/play/flaresolverr/base/deployment.yaml
# Generated by deploybot. Do not edit.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flaresolverr
  labels:
    app.kubernetes.io/managed-by: deploybot
    app.kubernetes.io/name: flaresolverr
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: flaresolverr
  template:
    metadata:
      labels:
        app.kubernetes.io/managed-by: deploybot
        app.kubernetes.io/name: flaresolverr
    spec:
      containers:
        - name: flaresolverr
          image: ghcr.io/flaresolverr/flaresolverr:v3.3.25
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8191
          resources:
            requests:
              cpu: 200m
              memory: 512Mi
            limits:
              cpu: 8000m
              memory: 4Gi
