internal/render/testdata/flaresolverr/k8s/play/flaresolverr/base/httproute.yaml
# Generated by deploybot. Do not edit.
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flaresolverr
  labels:
    app.kubernetes.io/managed-by: deploybot
    app.kubernetes.io/name: flaresolverr
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: envoy-gateway-system
      sectionName: https
  hostnames:
    - flaresolverr.k8s.kcloud.zone
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: flaresolverr
          port: 8191
