internal/render/testdata/flaresolverr/k8s/play/flaresolverr/base/service.yaml
# Generated by deploybot. Do not edit.
apiVersion: v1
kind: Service
metadata:
  name: flaresolverr
  labels:
    app.kubernetes.io/managed-by: deploybot
    app.kubernetes.io/name: flaresolverr
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8191
